# CaineMP

./: .gitignore  AUDIT_REPORT.md  PHASE_1_PERMISSIONS_DOCS.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio-engine.cpp  audio-engine.h  jni-bridge.cpp
app/src/main/kotlin/com/example/bitperfect/: MainActivity.kt
app/src/main/kotlin/com/example/bitperfect/audio/: AudioEffectBroadcastReceiver.kt  AudioEffectBroadcaster.kt  AudioPlayer.kt  AudioPlayerManager.kt
app/src/main/kotlin/com/example/bitperfect/ui/screens/: PlayerScreen.kt
app/src/main/kotlin/com/example/bitperfect/ui/theme/: Theme.kt  Typography.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
